fix: Fixed canvas not invisible

--- a/src/components/camera-lens.css
+++ b/src/components/camera-lens.css
@@ -14,7 +14,7 @@
 .camera-lens.scanning {
 	border: 4px solid rgb(30 150 215 / 70%);
 }
-.camera-lens .canvas {
+.camera-lens canvas {
 	display:none;
 }
 .lens-feedback {
